force-app/main/default/objects/pfc_Annual_Contributions__c/pfc_Annual_Contributions__c.object-meta.xml
<CustomObject>
    <description>Custom Object that Tracks Annual Contribution</description>
    <label>Annual Contribution</label>
    <nameField>
        <displayFormat>CON-{00000000}</displayFormat>
        <label>Annual Contributions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>