force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Affects_RRSP_Limit__c.field-meta.xml
<CustomField>
    <fullName>Affects_RRSP_Limit__c</fullName>
    <description>Identifies if this Contribution counts towards RRSP Limit</description>
    <formula>ISPICKVAL(Contribution_Type__c , 'RRSP') || ISPICKVAL( Contribution_Type__c , 'DPSP') || ISPICKVAL( Contribution_Type__c , 'Pension')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if this Contribution counts towards RRSP Limit</inlineHelpText>
    <label>Affects RRSP Limit?</label>
    <type>Checkbox</type>
</CustomField>