force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Affects_TFSA_Limit__c.field-meta.xml
<CustomField>
    <fullName>Affects_TFSA_Limit__c</fullName>
    <description>Identifies if this Contribution counts towards TFSA Limit</description>
    <formula>ISPICKVAL(Contribution_Type__c , 'TFSA')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if this Contribution counts towards TFSA Limit</inlineHelpText>
    <label>Affects TFSA Limit?</label>
    <type>Checkbox</type>
</CustomField>