force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Amount__c</fullName>
    <description>Annual Contribution Amount</description>
    <inlineHelpText>Annual Contribution Amount</inlineHelpText>
    <label>Contribution Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>