force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Contribution_Applies_to_FY__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Applies_to_FY__c</fullName>
    <description>Contribution Applies to Fiscal Year</description>
    <formula>IF (ISPICKVAL( Contribution_Type__c ,'RRSP'),  Fiscal_Year__r.Year__c +1 ,  Fiscal_Year__r.Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contribution Applies to Fiscal Year</inlineHelpText>
    <label>Contribution Applies to FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>