force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Contribution_Description__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Description__c</fullName>
    <description>Contribution Description</description>
    <inlineHelpText>Contribution Description</inlineHelpText>
    <label>Contribution Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>