force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Contribution_Source__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Source__c</fullName>
    <label>Contribution Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>