force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <description>Type of Contribution</description>
    <inlineHelpText>Type of Contribution</inlineHelpText>
    <label>Contribution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RRSP</fullName>
            </value>
            <value>
                <fullName>TFSA</fullName>
            </value>
            <value>
                <fullName>DPSP</fullName>
            </value>
            <value>
                <fullName>HBP Re-Payment</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>RESP</fullName>
            </value>
            <value>
                <fullName>Saving Long Term</fullName>
            </value>
            <value>
                <fullName>Saving Short Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>