force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Fiscal Year</description>
    <label>Fiscal Year</label>
    <referenceTo>pfc_Fiscal_Year__c</referenceTo>
    <relationshipLabel>Annual Contributions</relationshipLabel>
    <relationshipName>Annual_Contributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>