force-app/main/default/objects/pfc_Annual_Contributions__c/fields/Pre_Tax_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this contribution was deducted Pre/post tax</description>
    <inlineHelpText>Indicates if this contribution was deducted Pre/post tax</inlineHelpText>
    <label>Pre Tax Contribution</label>
    <type>Checkbox</type>
</CustomField>